Wed Apr 25 14:26:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* benchmark/bm_hash_shift.rb: add benchmark for Hash#shift

	* hash.c (rb_hash_shift): use st_shift if hash is not being iterated to
	  delete element without iterating the whole hash.

	* hash.c (shift_i): remove function

	* include/ruby/st.h (st_shift): add st_shift function

	* st.c (st_shift): ditto

	[Bug #8312] [ruby-core:54524] Patch by funny-falcon

Thu Apr 25 12:03:38 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Extract C programs as toplevel constants.

Thu Apr 25 02:23:28 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_RM_RECURSIVE): this hack is needed by only
	  autoconf 2.69 or earlier on darwin.

Thu Apr 25 01:22:41 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tracer.rb (get_line): simply read by File.readlines.

	* lib/debug.rb (script_lines): get source lines from SCRIPT_LINES__ or
	  read from the file.

	* lib/debug.rb (display_list): use script_lines instead of recursion.
	  [Bug #8318]

	* lib/debug.rb (line_at): use script_lines same as display_list.

	* lib/debug.rb (display_list): Fix debug listing when called from the
	  same file it has been required.  patch by Dario Bertini <berdario AT
	  gmail.com> [Bug #8318] [fix GH-280]

Wed Apr 24 21:51:13 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Check mblen().
	  mblen() is optional in uClibc.

	* eval_intern.h (CharNext): Don't use mblen() is not available.

Wed Apr 24 15:55:06 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_fd_fix_cloexec): use rb_update_max_fd().

Wed Apr 24 14:08:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* numeric.c: Fix wiki link on Float imprecision in overview, patched
	  by Makoto Kishimoto [Bug #8304] [ruby-dev:47280]

Wed Apr 24 14:03:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): disallow $- without following identifier
	  character.  [ruby-talk:406969]
